change cmb component

--- a/shop-online/web-spa-business/src/app/shared/gridinput/gridinput.html
+++ b/shop-online/web-spa-business/src/app/shared/gridinput/gridinput.html
@@ -33,8 +33,8 @@
                                             <span *ngIf="header.fieldInfo.type=='number'">{{item[header.fieldInfo.name] | cusNumber:{separated: true} }}</span>
                                         </div>
                                         <div *ngIf="header.editable">
-                                            <cmb-field-cmp *ngIf="header.fieldInfo.type=='combobox'" [info]="header.fieldInfo" [(fieldModel)]="item[header.fieldInfo.name]"></cmb-field-cmp>
-                                            <smartcmb-field-cmp *ngIf="header.fieldInfo.type=='smartcombobox'" [info]="header.fieldInfo" [(fieldModel)]="item[header.fieldInfo.name]"></smartcmb-field-cmp>
+                                            <cmb-field-cmp *ngIf="header.fieldInfo.type=='combobox'" [info]="header.fieldInfo" [(fieldModel)]="item[header.fieldInfo.name]" [(displayFieldModel)]="item[header.fieldInfo.displayName]"></cmb-field-cmp>
+                                            <smartcmb-field-cmp *ngIf="header.fieldInfo.type=='smartcombobox'" [info]="header.fieldInfo" [(fieldModel)]="item[header.fieldInfo.name]" [(displayFieldModel)]="item[header.fieldInfo.displayName]"></smartcmb-field-cmp>
                                             <text-field-cmp *ngIf="header.fieldInfo.type=='text'" [info]="header.fieldInfo" [(fieldModel)]="item[header.fieldInfo.name]"></text-field-cmp>
                                             <text-field-cmp *ngIf="header.fieldInfo.type=='email'" [info]="header.fieldInfo" [(fieldModel)]="item[header.fieldInfo.name]"></text-field-cmp>
                                             <number-field-cmp *ngIf="header.fieldInfo.type=='number'" [info]="header.fieldInfo" [(fieldModel)]="item[header.fieldInfo.name]"></number-field-cmp>
