fix refactor code

--- a/shop-online/web-spa-business/src/app/warehouse/import/import.html
+++ b/shop-online/web-spa-business/src/app/warehouse/import/import.html
@@ -39,7 +39,7 @@
                                 <cmb-field-cmp [info]="formInfo.getField('warehouseId')" [(fieldModel)]="model['warehouseId']"></cmb-field-cmp>
                             </div>
                             <div class="col-md-6">
-                                <smartcmb-field-cmp [info]="formInfo.getField('supplier')" [(fieldModel)]="model['supplier']"></smartcmb-field-cmp>
+                                <smartcmb-field-cmp [info]="formInfo.getField('supplierId')" [(fieldModel)]="model['supplierId']"></smartcmb-field-cmp>
                             </div>
                         </div>
 
