--- a/shop-online/web-spa-business/src/app/shared/form/field/smartcombobox.css
+++ b/shop-online/web-spa-business/src/app/shared/form/field/smartcombobox.css
@@ -3,7 +3,8 @@ a.list-group-item {
 }
 
 .smart-combobox {
-    width: 95%;
+    /*width: 95%;*/
+    min-width: 200px;
     max-height: 200px;
     overflow: auto;
     border: solid 4px #eee;
