--- a/shop-online/web-spa-business/src/app/warehouse/detail/detail.html
+++ b/shop-online/web-spa-business/src/app/warehouse/detail/detail.html
@@ -19,10 +19,10 @@
                     <div class="col-xs-12">
                         <div class="row">
                             <div class="col-md-4">
-                                <cmb-field-cmp [info]="formInfo.getField('warehouseId')" [(fieldModel)]="model['warehouseId']"></cmb-field-cmp>
+                                <cmb-field-cmp [info]="formInfo.getField('warehouseId')" [(fieldModel)]="model['warehouseId']" [(displayFieldModel)]="model['warehouseName']"></cmb-field-cmp>
                             </div>
                             <div class="col-md-4">
-                                <cmb-field-cmp [info]="formInfo.getField('employeeId')" [(fieldModel)]="model['employeeId']"></cmb-field-cmp>
+                                <cmb-field-cmp [info]="formInfo.getField('employeeId')" [(fieldModel)]="model['employeeId']" [(displayFieldModel)]="model['employeeName']"></cmb-field-cmp>
                             </div>
                             <div class="col-md-4">
                                 <div class="form-group">
