--- a/shop-online/web-spa-business/src/app/warehouse/transfer/transfer.html
+++ b/shop-online/web-spa-business/src/app/warehouse/transfer/transfer.html
@@ -18,7 +18,7 @@
                     <div class="col-xs-12">
                         <div class="row">
                             <div class="col-md-6">
-                                <cmb-field-cmp [info]="formInfo.getField('employeeId')" [(fieldModel)]="model['employeeId']"></cmb-field-cmp>
+                                <cmb-field-cmp [info]="formInfo.getField('employeeId')" [(fieldModel)]="model['employeeId']" [(displayFieldModel)]="model['employeeName']"></cmb-field-cmp>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -29,10 +29,10 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                <cmb-field-cmp [info]="formInfo.getField('warehouseId')" [(fieldModel)]="model['warehouseId']"></cmb-field-cmp>
+                                <cmb-field-cmp [info]="formInfo.getField('warehouseId')" [(fieldModel)]="model['warehouseId']" [(displayFieldModel)]="model['warehouseName']"></cmb-field-cmp>
                             </div>
                             <div class="col-md-6">
-                                <cmb-field-cmp [info]="formInfo.getField('customer')" [(fieldModel)]="model['customer']"></cmb-field-cmp>
+                                <cmb-field-cmp [info]="formInfo.getField('warehouseId1')" [(fieldModel)]="model['warehouseId1']" [(displayFieldModel)]="model['warehouseName1']"></cmb-field-cmp>
                             </div>
                         </div>
                         <div class="row">
