--- a/shop-online/web-spa-business/src/app/shared/form/field/text.html
+++ b/shop-online/web-spa-business/src/app/shared/form/field/text.html
@@ -1,3 +1,3 @@
 <form-field-cmp [info]="info" [fieldModel]="fieldModel">
-    <input class="form-control" onfocus="this.select();" [ngModel]="fieldModel" (ngModelChange)="updateData($event)" name="info.name" [type]="info.type" [minlength]="info.minlength" [maxlength]="info.maxlength" [autofocus]="info.autofocus">
+    <input class="form-control" onfocus="this.select();" [ngModel]="fieldModel" (ngModelChange)="updateData($event)" name="info.name" [type]="info.type" [minlength]="info.minlength" [maxlength]="info.maxlength" [autofocus]="info.autofocus" [disabled]="!info.enabled">
 </form-field-cmp>
