Add pdf generator

--- a/shop-online/web-spa-business/src/app/shared/gridinput/gridinput.html
+++ b/shop-online/web-spa-business/src/app/shared/gridinput/gridinput.html
@@ -22,7 +22,8 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let item of items; let idx = index;" class="gradeX" [class.odd]="odd" [class.even]="even">
+                                <tr *ngFor="let item of items; let idx = index;" class="gradeX" [class.odd]="odd" [class.even]="even" [class.selected]="item==selectedItem"
+                                    (click)="execute('select', item)">
                                     <td>{{idx + 1}}</td>
                                     <td *ngFor="let header of info.columns">
                                         <div *ngIf="!(header.editable)">
