--- a/shop-online/web-spa-business/src/app/shared/alert/alert.html
+++ b/shop-online/web-spa-business/src/app/shared/alert/alert.html
@@ -1,1 +1,1 @@
-<div *ngFor="let item of info" [class]="'alert alert-' + item.type">{{item.message | translate}}</div>
+<div *ngFor="let item of info" [class]="'alert alert-' + item.type">{{item.message | translate:item.param}}</div>
